@@ -336,6 +336,11 @@ keep focus on project after refresh.
 keep focus on task after refresh.
 </p>
 </li>
+<li>
+<p>
+added support of tasks with deleted status.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -481,7 +486,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-03 08:48:03 CET
+Last updated 2013-12-03 08:57:52 CET
 </div>
 </div>
 </body>
